feat: update add item screen to new design
